# wapc-python

./: .gitignore  Readme.md  requirement.txt  setup.cfg
src/wapc/: __init__.py
src/wapc/modulestate/: __init__.py  modulestate.py
src/wapc/wapc/: __init__.py  wapc.py
tests/: hello.wasm  test.py
