[metadata]
name = wapc-python
version = 0.0.1
author = Alan Poon
author_email = brightshadowx@gmail.com
description = WAPC host for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alanpoon/wapc-python
project_urls =
    Bug Tracker = https://github.com/alanpoon/wapc-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src